nav is working past scroll, a little jump though gotta fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,27 @@ nav ul li.active {
 }
 
 
+/*// Class for when element is above threshold*/
+
+.pin-top {
+    position: relative;
+}
+
+
+/*// Class for when element is below threshold*/
+
+.pin-bottom {
+    position: relative;
+}
+
+
+/*// Class for when element is pinned*/
+
+.pinned {
+    position: fixed !important;
+}
+
+
 /*          ABOUT               */
 
 .about {
